tests/ui/imports/import-from-missing-star.stderr
error[E0432]: unresolved import `spam`
  --> $DIR/import-from-missing-star.rs:1:5
   |
LL | use spam::*;
   |     ^^^^ you might be missing crate `spam`
   |
   = help: consider adding `extern crate spam` to use the `spam` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
